# gwz-core

./: AGENTS.md  BUILD.bazel  Cargo.toml  README.md  RELEASE.md
.github/workflows/: release.yml
dev-docs/: GWSCombinedStatus.md  GWSGitBackendDecision.md  GWZDesign.md  GWZForallPlan-Review55.md  GWZForallPlan.md  GWZRequirements.md  GWZTagPlan.md  GwzAudit-Response48.md  GwzAudit-Response55.md  GwzAudit.md  GwzAuditResolutionPlan.md  GwzBranchPlan.md  GwzCommitMarker.md  GwzMergeDesign-ReviewF5-2.md  GwzMergeDesign-ReviewF5.md  GwzMergeDesign.md  GwzMergePlan-ReviewF5.md  GwzMergePlan.md
dev-docs/history/: GWZCombinedStatus.md  GWZGitBackendDecision.md  GWZGitlinkPlan.md  GWZImplPlan.md  GWZProtocolCodegen.md  GWZVision.md  GwzAuditResolutionPlan-Review55-2.md  GwzAuditResolutionPlan-Review55.md  SplitterToolCstPlan-Review55.md  SplitterToolCstPlan.md
docs/: Embedding.md  ErrorCatalog.md  EventCatalog.md  GitBackend.md  MemberListing.md  MessageCatalog.md  OperationModel.md  Protocol.md  README.md  Reference.md  Regeneration.md  RustApi.md  TagManagement.md  WhyGwz.md  WorkspaceArtifacts.md  generate_message_catalog.py
protocol/: d0_roundtrip_check.py  gws.taut.py  gwz.taut.py  regen.py
protocol/corpus/: golden.json
protocol/corpus/rust/: vectors.rs
protocol/fixtures/cli_parity/: merge_event.json  merge_response.json
scripts/: release.py
src/: lib.rs
src/artifact/: merge_marker.rs  mod.rs
src/diff/: classify.rs  git_diff.rs  handle_diff.rs  log_service.rs  mod.rs  model.rs  operands.rs  output.rs  plan.rs
src/diff/render/: mod.rs  names.rs  options.rs  patch.rs  summary.rs  tests.rs
src/diff/tests/: fixture.rs  mod.rs  t_binary.rs  t_cached.rs  t_classify.rs  t_handle.rs  t_log.rs  t_mode.rs  t_plan.rs  t_rename.rs  t_simple.rs  t_two_tree.rs  workspace_fixture.rs
src/git/: git_host.rs  git_transfer_progress.rs  gitbackend.rs  index_status_char.rs  mod.rs  verify_checkout_state.rs  worktree_status_char.rs
src/git/tests/: g00.rs  g01.rs  g02.rs  g03.rs  g04.rs  g05.rs  g06.rs  g07.rs  g08.rs  g09.rs  g12.rs  (+2 more)
src/model/: mod.rs
src/operation/: aggregate_status.rs  attribution_from_protocol.rs  eventemitter.rs  eventsubscription.rs  impl_operationrecord.rs  membermutationguard.rs  mod.rs  now_ms.rs  open_merge_gate.rs  operation_runtime.rs  par_map_per_host.rs  push_event.rs  resolve_jobs.rs  resolve_per_host.rs  workspace_mutator_lock.rs
src/protocol/: convert.rs  generated.rs  mod.rs
src/runtime/: clock.rs
src/stash/: mod.rs
src/status/: branch_groups_and_differences.rs  branch_label.rs  member_not_materialized.rs  mod.rs  protocol_source_kind.rs  status_member.rs  workspace_path.rs
src/workspace_ops/: agents_gwz_template.md  handle_branch.rs  handle_commit.rs  handle_create_repo.rs  handle_init_from_sources.rs  handle_list_snapshots.rs  handle_materialize.rs  handle_repo_lifecycle.rs  handle_stage.rs  handle_stash.rs  handle_tag.rs  historical_identity.rs  materialize_preflight.rs  mod.rs  normalize_path.rs  pathspec_routing.rs  pull_head_member_preflight.rs  push_member.rs  replace_managed_gitignore_block.rs  stage_routing.rs  stage_workspace_git_metadata.rs  sync_workspace_boundary.rs  target_selection.rs  workspace_bootstrap.rs
tests/: diff_render_spike.rs  protocol.rs  publish_workflow.rs  rename.rs
(+37 files in other folders)
