load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@crates//:defs.bzl", "aliases", "all_crate_deps")

exports_files(["Cargo.toml"])  # crate_universe reads this

# gwz-core — the GWZ workspace library.
# Deps: git2 (native: libgit2-sys/libssh2-sys/libz-sys/openssl-sys), serde, serde_yaml, url.
rust_library(
    name = "gwz_core",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/lib.rs",
    edition = "2024",
    # include_str!/generated data + non-rs files the crate reads at compile time
    compile_data = glob(["**/*"], exclude = ["**/*.rs", "BUILD.bazel", "Cargo.toml"], allow_empty = True),
    aliases = aliases(),
    # taut-shape is included here automatically: it is a path dependency in the
    # unified Cargo workspace, so crate_universe splices it and exposes it as
    # @crates//:taut-shape, which all_crate_deps() picks up like any other dep.
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
)
