[package]
name = "gwz-core"
version = "0.7.2"
edition = "2024"
license = "GPL-2.0-only"
rust-version = "1.95"
repository = "https://github.com/owebeeone/gwz-core"

[lib]
path = "src/lib.rs"

[dependencies]
git2 = { version = "0.21", features = ["https", "ssh"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
url = "2"
