[package]
name = "gwz-core"
version = "0.9.0"
edition = "2024"
license = "GPL-2.0-only"
rust-version = "1.95"
repository = "https://github.com/owebeeone/gwz-core"

[lib]
path = "src/lib.rs"

[dependencies]
git2 = { version = "0.21", features = ["https", "ssh"] }
taut-shape = { git = "https://github.com/owebeeone/taut-shape-rs", rev = "7fd171b737f25cb6c356845eb68164d35326ffb0", package = "taut-shape" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
url = "2"
getrandom = "0.3"
